--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,91 @@
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
+#noconsent {
+  margin-block-start: 0.1em;
+  margin-block-end: 0.1em;
+  padding-inline-start: 1rem;
+  padding-inline-end: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+input{
+  font-size: 0.5rem;
+  margin-left:0.3rem;
+}
+input[type="radio"] {
+  width: 0.5rem;
+  height: 0.5rem;
+  position: relative;
+}
+form[class="expandable"] {
+  display:none;
+}
+input[id="patient"]:checked ~ form[class="expandable"]{
+  display:inline;
+}
+legend {
+  background-color: #000;
+  color: #fff;
+  padding: 6px 8px;
+  font-size: 0.5rem;
+  /* border-radius: 10px;  */
+  display: flex;
+  justify-content: space-around;
+}
 
-
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 3em;
+  padding-inline-end: 3em;
+  padding-top: 1.1em;
+  padding-bottom: 1.5em;
+  width: 15rem
+}
+.form-all {
+  box-shadow: 0 0 32px rgba(42, 42, 42, 0.16);
+  margin-top: 1.7rem;
+  margin-bottom: 1.7rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+img {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 6.3rem;
+  height: 1.6rem;
+}
+h1 {
+  display: block;
+  text-align: center;
+  font-size: 0.5rem;
+  margin-block-end: 1.4rem;
+  font-weight: bold;
+}
+hr {
+  border: none;
+  color: #000000;
+  overflow: visible;
+  text-align: center;
+  height: 8px;
+}
+p {
+  font-size: 0.4rem;
+  margin-bottom:0.5rem;
+}
+label{
+  font-size: 0.4rem;
+}
+button{
+  font-size: 0.4rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 
 /* Container holding jsPsych content */
  .jspsych-display-element {
