--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,43 @@
   margin-block-end: 0.1em;
   padding-inline-start: 1rem;
   padding-inline-end: 1rem;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
-#logo{
+#logo {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-input{
-  font-size: 0.5rem;
+input {
+  display: inline-block;
+  border:1px solid;
+  font-size: 26px;
   margin-left:0.3rem;
+  border-radius: 4px;
 }
 input[type="radio"] {
-  width: 24px;
-  height: 24px;
+  width: 26px;
+  height: 26px;
   position: relative;
+  margin-left:0.3rem;
+}
+fieldset{
+  border-radius: 4px;
+}
+button[type=submit] {
+  width: 2rem;
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 10px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+button[type=submit]:hover {
+  background-color: #45a049;
 }
 form[class="expandable"] {
   display:none;
@@ -52,7 +73,7 @@ ul {
   padding-inline-start: 3em;
   padding-inline-end: 3em;
   padding-top: 1.1em;
-  padding-bottom: 1.5em;
+  padding-bottom: 2.5em;
   width: 15rem
 }
 .form-all {
@@ -82,14 +103,14 @@ hr {
   height: 8px;
 }
 p {
-  font-size: 24px;
+  font-size: 26px;
   margin-bottom:0.5rem;
 }
 label{
-  font-size: 24px;
+  font-size: 26px;
 }
 button{
-  font-size: 24px;
+  font-size: 26px;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
